[metadata]
name = smatool
version = 1.0
description="SMATool - Automated toolkit for computing zero and finite-temperature strength of materials",
author = Chinedu Ekuma
author_email = cekuma1@gmail.com
url = https://sourceforge.net/projects/smatool/
license = GNU GPL version 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
scripts =
    src/smatool
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    spglib
    ase
    catboost
    pymatgen
    matminer
    scikit-learn
    periodictable

[options.packages.find]
where = src

