[metadata]
name = smatool
version = 1.1
description="SMATool - Automated toolkit for computing zero and finite-temperature strength of materials",
author = Chinedu Ekuma
author_email = cekuma1@gmail.com
url = https://sourceforge.net/projects/smatool/
license = GNU GPL version 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
scripts =
    src/smatool
install_requires =
    numpy>=1.20.0
    scipy>=1.11.0
    matplotlib>=3.8.0
    pandas>=1.3.6
    bottleneck>=1.3.6
    spglib>=2.1.0
    pymatgen>=2023.10.11
    kaleido>=0.2.1
    plotly>=5.18.0
    ase>=3.22.1
    catboost>=1.2.2
    matminer>=0.9.2
    scikit-learn>=1.3.2
    tensorflow>=2.16.1
    keras>=3.0.5
    periodictable>=1.7.0
    pygrace>=1.4

[options.packages.find]
where = src

